# ladata

./: Cargo.toml  Changelog.md  README.md  check.sh
.cargo/: config.toml
.github/workflows/: check.yml  test.yml
examples/: basic.rs  custom_data.rs  customize.rs
src/: Lib.md  builder.rs  error.rs  handle.rs  lib.rs  macros.rs  nodata.rs  tests.rs  traits.rs
src/_old/: _tabledata.rs  lib.rs
src/_old/table/column/: categorical.rs
src/_old/table/column/numerical/: integer.rs
src/_old0/: _tabledata.rs  mod.rs
src/_old0/table/: item.rs  mod.rs
src/_old1/: error.rs  ids.rs
src/_old1/cell/: able.rs  impls.rs  mod.rs  storage.rs
src/_old1/cell/data/: conversions.rs
src/_old1/cell/type/: conversions.rs  mod.rs  nested.rs
src/_old1/frame/: _SACAR.rs  mod.rs  tests.rs
src/_old1/series/: api.rs  mod.rs  tests.rs
src/_old1/series/column/: _SACAR.rs  mod.rs  tests.rs
src/_old2/: able.rs  mod.rs
src/_old2/encodings/: api.rs  mod.rs
src/_old2/structures/: mod.rs
src/_old2/structures/abstract/: mod.rs
src/_old2/structures/concrete/: mod.rs
src/_old2/structures/concrete/cell/: mod.rs
src/_old2/types/: api.rs  classes.rs  generator_macro.rs  mod.rs
src/_old2/types/variants/: mod.rs  nested.rs
src/adt/: linked.rs  mod.rs
src/builder/: built.rs  lines.rs  macros.rs  mod.rs  types_cells.rs  types_units.rs  units.rs
src/cell/: able.rs  mod.rs  storage.rs
src/cell/data/: conversions.rs  mod.rs  nested.rs
src/cell/type/: conversions.rs  mod.rs  nested.rs
src/dataframe/: error.rs  handle.rs  mod.rs
src/dataframe/cell/: impls.rs  mod.rs
src/dataframe/cell/data/: mod.rs  nested.rs
src/dataframe/cell/type/: mod.rs  nested.rs
src/dataframe/column/: mod.rs
src/dataframe/row/: mod.rs
src/frame/: error.rs  format.rs  handle.rs  mod.rs
src/frame/cell/: able.rs  acceptable.rs  format.rs  inner.rs  mod.rs
src/frame/cell/data/: conversions.rs  mod.rs  nested.rs
src/frame/cell/type/: conversions.rs  mod.rs  nested.rs
src/frame/column/: format.rs  mod.rs  tests.rs
src/frame/row/: mod.rs  tests.rs
src/grid/: arr2d.rs  dyn2d.rs  grid2d.rs  mod.rs  tests.rs
src/line/: bit.rs  mod.rs
src/line/link/: builder.rs  mod.rs  tests.rs
src/line/queue/: methods.rs  mod.rs  std_impls.rs
src/line/stack/: methods.rs  mod.rs  std_impls.rs  tests.rs
src/list/: mod.rs
src/list/array/: bit.rs  core_impls.rs  impls.rs  methods.rs  mod.rs  std_impls.rs  traits.rs
src/list/bit_array/: impls.rs  methods.rs  mod.rs
src/list/deque/: data.rs  impls.rs  methods.rs  mod.rs  std_impls.rs
src/list/link/: adt.rs  builder.rs  doubly.rs  mod.rs  tests.rs
src/list/linked/: data.rs  doubly.rs  mod.rs  singly.rs  tests.rs
src/list/linked/singly/: mod.rs  node.rs
src/list/queue/: data.rs  impls.rs  methods.rs  mod.rs  std_impls.rs
src/list/stack/: data.rs  impls.rs  methods.rs  mod.rs  std_impls.rs
src/mem/: bit_size.rs  direct.rs  mod.rs  raw.rs  size.rs
src/mem/array/: methods.rs  mod.rs  std_impls.rs
src/mem/size/: bit_size.rs  mod.rs
src/mem/storage/: direct.rs  mod.rs
src/misc/: count.rs  counter.rs  index.rs  mod.rs
src/other/: bit_array.rs  mod.rs  nodata.rs
src/series/: api.rs  mod.rs
src/series/column/: mod.rs
src/series/row/: mod.rs
src/special/: bit_array.rs  mod.rs  nodata.rs
src/storage/: lac.rs  mod.rs
src/structs/: bit_array.rs  bits.rs  mod.rs
src/structs/list/: double.rs  mod.rs
src/table/: display.rs  item.rs  mod.rs
src/table/column/: categorical.rs  mod.rs  numerical.rs
src/table/column/numerical/: float.rs  mod.rs
src/unit/: Mod.md  build.rs  macros.rs  mod.rs  nodata.rs  tests.rs  traits.rs
src/units/: build.rs  built.rs  macros.rs  mod.rs  nodata.rs  tests.rs  traits.rs
util/: full-test.sh
