[package]
name = "ladata"
description = "A simple & modular data model."
version = "0.0.28"
edition = "2021"
rust-version = "1.70"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/ladata"
documentation = "https://docs.rs/ladata"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
categories = [ "no-std", "data-structures" ]
keywords = [ "data", "type", "unit" ]
publish = true


[features]
default = ["std", "safe", "deps_default"]
#
std = ["alloc", "half?/std", "devela/std"]
alloc = ["devela/alloc"] # allocating no-std
no-std = [] # non-allocating no-std. incompatible with "std"
#
safe = [] # disables unsafe in this crate
safest = ["safe", "devela/safe"] # disables unsafe in dependencies.
unsafe = [] # enables unsafe alternatives. incompatible with "safe"
#
nightly = [] # only for docs

deps_default = ["deps_discrete", "deps_string", "time"]
deps_all = ["deps_numerical", "deps_categorical"]
# deps_default = [
#     #"deps_numerical",
#         "deps_discrete",
#         #"deps_continuous",
#             "half", "twofloat",
#     #"deps_categorical",
#         "deps_string",
#         #"deps_datetime",
#             "time", # !"fugit",
# ]

deps_numerical= ["deps_continuous", "deps_discrete"]
deps_continuous = ["half", "twofloat"]
deps_discrete = ["num-rational", "num-bigint", "rust_decimal"]

deps_categorical = ["deps_datetime", "deps_string"]
deps_datetime = ["fugit", "time"]
deps_string =  ["arraystring"]


[dependencies]
devela = { version = "0.5.3", default-features = false }
unicode-segmentation = "1.10.1" # RETHINK

#* optional dependencies *#

# feature: "deps_continuous" (continuous numbers):
half = { version = "2.2.1", optional = true, default-features = false } # F16 BF16
twofloat = { version = "0.6.1", optional = true, default-features = false } # F128

# feature: "deps_discrete" (discrete numbers):
num-rational = { version = "0.4.1", optional = true } # Ratio
num-bigint = { version = "0.4.3", optional = true } # BigInt
rust_decimal = { version = "1.25.0", optional = true } # Decimal

# feature: "deps_string" (strings):
arraystring = { version = "0.3.0", optional = true } # ArrayString*

# feature: "dep_datetime" (date/time):
fugit = { version = "0.3.6", optional = true }
time = { version = "0.3.11", optional = true }

[dev-dependencies]


[package.metadata.docs.rs]
no-default-features = true
features = ["nightly", "std", "deps_all"]

[badges]
maintenance = { status = "experimental" }
