[package]
name = "ladata"
description = "A simple & modular data model."
version = "0.0.28"
edition = "2021"
rust-version = "1.72.0" # in sync with ./check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/ladata"
documentation = "https://docs.rs/ladata"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/src/**/*.md",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
categories = [ "data-structures", "no-std::no-alloc" ]
keywords = [ "data", "type", "unit" ]
publish = true


[features]
default = ["std", "deps_default"]

# environment features
# (not enabling "std" declares the library as "no_std")
std = [ # features that depend on the standard library
	"alloc",
	"half?/std",
	"devela/std",
]
alloc = ["devela/alloc"] # features that depend on allocation
no_std = ["devela/no_std"] # features incompatible with the standard library

# safety features
safe = [] # forbid unsafe at the crate level
safest = ["safe", "devela/safest"] # forbid unsafe recursively
unsafe = [ # enables all the unsafe features
	"unsafe_constructors",
	"unsafe_init",
	"unsafe_pop",
	"unsafe_unit",
]
unsafe_constructors = ["devela/unsafe_num"] # enables unchecked constructors
unsafe_init = [] # enable fast array initialization
unsafe_pop = [] # enable pop methods not depending on T: Clone
unsafe_unit = [] # enable `unit::DataRaw`
unsafest = ["unsafe", "devela/unsafest"] # enables unsafe recursively.

# nightly features
nightly = [] # only for docs
nightly_docs = [
	"nightly",
	"std",
	"unsafe",
	"deps_all",
	"devela/nightly_docs",
]

# deprecated features
no-std = ["no_std"]

# other features
deps_default = [
    # "deps_numerical",
        "deps_discrete",
        # "deps_continuous",
            # "half", "twofloat",
    # "deps_categorical",
        "deps_string",
        # "deps_datetime",
            "time", # !"fugit",
]
deps_all = ["deps_numerical", "deps_categorical"]
deps_numerical= ["deps_continuous", "deps_discrete"]
	deps_continuous = ["half", "twofloat"]
	deps_discrete = ["num-rational", "num-bigint", "rust_decimal"]
deps_categorical = ["deps_datetime", "deps_string"]
	deps_datetime = ["fugit", "time"]
	deps_string =  ["arraystring"]


[dependencies]
devela = { version = "0.8.0", default-features = false }
unicode-segmentation = "1.10.1" # RETHINK

#* optional dependencies *#

# feature: "deps_continuous" (continuous numbers):
half = { version = "2.3", optional = true, default-features = false } # F16 BF16
twofloat = { version = "0.6.1", optional = true, default-features = false } # F128

# feature: "deps_discrete" (discrete numbers):
num-rational = { version = "0.4.1", optional = true } # Ratio
num-bigint = { version = "0.4.3", optional = true } # BigInt
rust_decimal = { version = "1.31.0", optional = true } # Decimal

# feature: "deps_string" (strings):
arraystring = { version = "0.3.0", optional = true } # ArrayString*

# feature: "dep_datetime" (date/time):
fugit = { version = "0.3.6", optional = true }
time = { version = "0.3.11", optional = true }

[dev-dependencies]


[package.metadata.docs.rs]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }
